creada la pagina de juegos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <ul class="navbar_buttonsList">
-      <li class="navbar_buttonsList--boton"> <a href="#"><span>Juegos</span></a></li>
+      <li class="navbar_buttonsList--boton"> <a href="./Pages/Juegos.html"><span>Juegos</span></a></li>
       <li class="navbar_buttonsList--boton"> <a href="#"> <span>Redes</span></a></li>
       <li class="navbar_buttonsList--boton"> <a href="#"><span>¿quien soy?</span></a></li>
     </ul>
