terminada las ultimas paginas

--- a/Pages/Juegos.html
+++ b/Pages/Juegos.html
@@ -31,9 +31,9 @@
     </div>
 
     <ul class="navbar_buttonsList">
-      <li class="navbar_buttonsList--boton"> <a href="#"><span>Juegos</span></a></li>
-      <li class="navbar_buttonsList--boton"> <a href="#"> <span>Redes</span></a></li>
-      <li class="navbar_buttonsList--boton"> <a href="#"><span>¿quien soy?</span></a></li>
+      <li class="navbar_buttonsList--boton"> <a href="./Juegos.html"><span>Juegos</span></a></li>
+      <li class="navbar_buttonsList--boton"> <a href="./Redes.html"> <span>Redes</span></a></li>
+      <li class="navbar_buttonsList--boton"> <a href="./QuienSoy.html"><span>¿quien soy?</span></a></li>
     </ul>
 
   </nav>
@@ -53,7 +53,7 @@
           <li class="main_cardContainer_card--resume">
             <p>juego fanmade basado la fraquicia de FNAF, con una jugabilidad clasica. en este juego estaras dentro...</p>
           </li>
-          <li class="main_cardContainer_card--showMore"> <a href="#">
+          <li class="main_cardContainer_card--showMore"> <a href="./Programas_Pages/ProjectFNAR.html">
               <h4>Ver mas</h4>
             </a></li>
         </ol>
@@ -68,7 +68,7 @@
           <li class="main_cardContainer_card--resume">
             <p>programa de pngtuber para stre amers, ofrece la posibilidad de personalizar las recompensas...</p>
           </li>
-          <li class="main_cardContainer_card--showMore"> <a href="#">
+          <li class="main_cardContainer_card--showMore"> <a href="./Programas_Pages/projectPNGtuber.html">
               <h4>Ver mas</h4>
             </a></li>
         </ol>
@@ -83,7 +83,7 @@
           <li class="main_cardContainer_card--resume">
             <p>modelo 3d de una nave espacial, es un proyecto aun en desarrollo que espero terminar...</p>
           </li>
-          <li class="main_cardContainer_card--showMore"> <a href="#">
+          <li class="main_cardContainer_card--showMore"> <a href="./Programas_Pages/spaceFox3D.html">
               <h4>Ver mas</h4>
             </a></li>
         </ol>
@@ -100,7 +100,7 @@
           <li class="main_cardContainer_card--resume">
             <p>este es un proyecto cancelado por mi parte, hacia parte de mi primer videojuego hecho en unity...</p>
           </li>
-          <li class="main_cardContainer_card--showMore"> <a href="#">
+          <li class="main_cardContainer_card--showMore"> <a href="./Programas_Pages/projectShootEmUp.html">
               <h4>Ver mas</h4>
             </a></li>
         </ol>
@@ -115,7 +115,8 @@
           <li class="main_cardContainer_card--resume">
             <p>este juego esta desarrollado en unity, y la idea de este proyecto fue crear un videojuego...</p>
           </li>
-          <li class="main_cardContainer_card--showMore"> <a href="#">
+          <li class="main_cardContainer_card--showMore"> 
+            <a href="./Programas_Pages/oneNightAtRandom.html">
               <h4>Ver mas</h4>
             </a></li>
         </ol>
@@ -135,7 +136,7 @@
       <li>
         <h3>FOX ONE</h3>
       </li>
-      <li> <a href="#"><span>Legal</span></a></li>
+      <li> <a href="./Legal.html"><span>Legal</span></a></li>
     </ul>
 
     <ul class="footer_buttonlist">
