--- a/index.html
+++ b/index.html
@@ -28,32 +28,33 @@
 
     <ul class="navbar_buttonsList">
       <li class="navbar_buttonsList--boton"> <a href="./Pages/Juegos.html"><span>Juegos</span></a></li>
-      <li class="navbar_buttonsList--boton"> <a href="#"> <span>Redes</span></a></li>
-      <li class="navbar_buttonsList--boton"> <a href="#"><span>¿quien soy?</span></a></li>
+      <li class="navbar_buttonsList--boton"> <a href="./Pages/Redes.html"> <span>Redes</span></a></li>
+      <li class="navbar_buttonsList--boton"> <a href="./Pages/QuienSoy.html"><span>¿quien soy?</span></a></li>
     </ul>
 
   </nav>
 
+  <!-- ******end of navbar***** -->
   <main class="main">
     <div class="main_firstCard">
       <h1 class="main_firstCard--tittle">FOX ONE GAMES</h1>
       <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <a href="#"> <img src="./Assets/Fnar_image.webp" class="d-block w-100" alt="...">
+            <a href="./Pages/Programas_Pages/ProjectFNAR.html"> <img src="./Assets/Fnar_image.webp" class="d-block w-100" alt="...">
             <h3>Proyecto FNAR</h3></a>     
           </div>
           <div class="carousel-item">
-            <a href="#"><img src="./Assets/PngTuber_image.webp" class="d-block w-100" alt="...">
+            <a href="./Pages/Programas_Pages/projectPNGtuber.html"><img src="./Assets/PngTuber_image.webp" class="d-block w-100" alt="...">
             <h3>Proyecto Pngtuber</h3>
           </a>
           </div>
           <div class="carousel-item">
-            <a href="#"><img src="./Assets/Ship3D_image.webp" class="d-block w-100" alt="...">
+            <a href="./Pages/Programas_Pages/spaceFox3D.html"><img src="./Assets/Ship3D_image.webp" class="d-block w-100" alt="...">
             <h3>Spaceship FS-7723 (SpaceFox)</h3></a>
           </div>
           <div class="carousel-item">
-            <a href="#"><img src="./Assets/shootemup_image.webp" class="d-block w-100" alt="...">
+            <a href="./Pages/Programas_Pages/projectShootEmUp.html"><img src="./Assets/shootemup_image.webp" class="d-block w-100" alt="...">
             <h3>Proyecto shootem'up (cancelled)</h3></a>
           </div>
         </div>
@@ -78,6 +79,8 @@
 
   </main>
 
+ <!-- ******start footer***** -->
+
   <footer class="footer">
     <div class="footer_logo">
       <img src="./Assets/Logo.webp" alt="">
@@ -86,7 +89,7 @@
     
     <ul class="footer_buttonlist">
       <li> <h3>FOX ONE</h3></li>
-      <li> <a href="#"><span>Legal</span></a></li>
+      <li> <a href="./Pages/Legal.html"><span>Legal</span></a></li>
     </ul>
 
     <ul class="footer_buttonlist">
