--- a/Pages/Legal.html
+++ b/Pages/Legal.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>Legal</title>
+  <link rel="icon" type="image/webp" href="../Assets/LogoBlack.webp"/>
+  <meta name="Keywords" content="Legal, Foxone, condiciones, ayuda, informacion">
+  <meta name="description" content="eres libre de usar mi contenido, solo te pido que me des la atribucion correspondiente">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
