--- a/Pages/Redes.html
+++ b/Pages/Redes.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Redes</title>
+    <link rel="icon" type="image/webp" href="../Assets/LogoBlack.webp"/>
+    <meta name="Keywords" content="Redes, Foxone, contacto, informacion, ayuda">
+    <meta name="description" content="Me puedes contactar en las distintas redes sociales, y tambien me pudes seguir para mas actualizaciones">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
