corregido varios bugs relacionados con el media

--- a/Pages/QuienSoy.html
+++ b/Pages/QuienSoy.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Legal</title>
+    <title>¿quien soy?</title>
     <link rel="icon" type="image/webp" href="../Assets/LogoBlack.webp"/>
     <meta name="Keywords" content="biografia, Foxone, indie, informacion">
     <meta name="description" content="yo soy raul (o mas conocido como raulchis), mi personaje es un zorro parlante. me encanta el mundillo de los videojuegos, tanto jugarlos, como su desarrollo.">
